--- a/package.json
+++ b/package.json
@@ -24,12 +24,13 @@
     "react-router-dom": "^6.26.2",
     "react-scroll": "^1.9.0",
     "recharts": "^2.12.7",
-    "sass": "^1.79.4",
+    "sass": "^1.81.0",
     "styled-components": "^6.1.13",
     "three": "^0.169.0"
   },
   "devDependencies": {
     "@eslint/js": "^9.9.0",
+    "@types/node": "^22.9.0",
     "@types/react": "^18.3.3",
     "@types/react-dom": "^18.3.0",
     "@types/react-scroll": "^1.8.10",
@@ -40,8 +41,8 @@
     "eslint-plugin-react-hooks": "^5.1.0-rc.0",
     "eslint-plugin-react-refresh": "^0.4.9",
     "globals": "^15.9.0",
-    "postcss": "^8.4.47",
-    "sass-embedded": "^1.79.4",
+    "postcss": "^8.4.49",
+    "sass-embedded": "^1.81.0",
     "tailwindcss": "^3.4.13",
     "typescript": "^5.5.3",
     "typescript-eslint": "^8.0.1",
