--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "hydra",
   "private": true,
-  "version": "0.0.0",
+  "version": "v1.0.0",
   "scripts": {
     "dev": "vite",
     "build": "tsc -b && vite build",
@@ -11,22 +11,35 @@
   "dependencies": {
     "@babylonjs/core": "^7.27.0",
     "@babylonjs/gui": "^7.27.0",
+    "@esbuild-plugins/node-globals-polyfill": "^0.2.3",
+    "@esbuild-plugins/node-modules-polyfill": "^0.2.2",
     "@react-three/drei": "^9.114.0",
     "@react-three/fiber": "^8.17.8",
+    "algosdk": "^3.0.0",
     "apexcharts": "^3.54.0",
+    "axios": "^1.7.7",
+    "axios-retry": "^4.5.0",
+    "bech32": "^2.0.0",
     "bignumber.js": "^9.1.2",
+    "buffer": "^6.0.3",
     "classnames": "^2.5.1",
     "framer-motion": "^11.8.0",
+    "process": "^0.11.10",
+    "rc-checkbox": "^3.5.0",
     "react": "^18.3.1",
     "react-apexcharts": "^1.4.1",
     "react-dom": "^18.3.1",
     "react-qr-code": "^2.0.15",
     "react-router-dom": "^6.26.2",
     "react-scroll": "^1.9.0",
+    "react-toastify": "^10.0.6",
+    "react-tooltip": "^5.28.0",
     "recharts": "^2.12.7",
     "sass": "^1.81.0",
     "styled-components": "^6.1.13",
-    "three": "^0.169.0"
+    "swr": "^2.2.5",
+    "three": "^0.169.0",
+    "wallet-address-validator": "^0.2.4"
   },
   "devDependencies": {
     "@eslint/js": "^9.9.0",
